@@ -37,10 +37,7 @@ export class DetectChangesModalComponent extends MainDialogComponent implements 
         if (response.success) {
           // var openCollection = _.findWhere(response.data, { id: this.documentFound.collection_id });
           // var openDocument   = _.findWhere(openCollection.children, { id: this.documentFound.document_id });
-	  console.error("getData():", response.data);
-	  console.error("this.documentFound.collection_id:", this.documentFound.collection_id);
-          var openCollection = response.data.find(doc => doc.collection_id === this.documentFound.collection_id);
-	  console.error("openCollection:", openCollection);
+          var openCollection = response.data.find(doc => doc.id === this.documentFound.collection_id);
           var openDocument   = openCollection.children.find(doc => doc.id === this.documentFound.document_id);
 
           this.annotationSchemaService.restore(this.documentFound.annotator_type)
@@ -63,7 +60,7 @@ export class DetectChangesModalComponent extends MainDialogComponent implements 
                 this.dialogRef.close(modalResponse);
               } else
                 this.dialogRef.close(response);
-            }, function (error) {
+            }, (error) => {
              this.dialogRef.close(error);
             });
         } else {
